# agentic-ai

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  run.py
docs/: architecture.md  concepts.md  hooks.md  project-structure.md  skills.md  tools.md
docs/phases/: phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md  phase6b-video-quality.md  phase7-web-portal-and-visual-quality.md
src/: config.py
src/agents/: editor_agent.py  platform_agent.py  research_agent.py  script_agent.py  shorts_agent.py  visual_agent.py  voice_agent.py  youtube_agent.py
src/pipeline/: state.py
src/tools/: editor_tool.py  elevenlabs_tool.py  image_tool.py  pexels_tool.py  search_tool.py  thumbnail_tool.py  video_tool.py
web/: app.py
web/templates/: base.html  config.html  dashboard.html  topic.html
