[project]
name = "agentic-ai"
version = "0.1.0"
description = "Fully automated YouTube channel pipeline using Claude and agentic AI"
authors = [
    {name = "Waqas Ahmed",email = "waqas.ghaloo@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "anthropic (>=0.111.0,<0.112.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "ddgs (>=9.14.4,<10.0.0)",
    "elevenlabs (>=2.53.0,<3.0.0)",
    "fal-client (>=1.0.0,<2.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "moviepy (<2.0)",
    "pillow (>=12.2.0,<13.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "ruff (>=0.15.18,<0.16.0)"
]
